working on it 2

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/services/FireBase.js"></script>
 </body>
 </html>
