--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -7,15 +7,13 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
     <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
-<body class="clearfix">
-      <section class="left">
-        <h1>Bloc Chat</h1>
-        <ui-view></ui-view>
-      </section>
+</head>
 
-      <section class="right">
-      </section>
+<body class="clearfix">
+  
+      <ui-view></ui-view>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
@@ -31,8 +29,10 @@
       };
       firebase.initializeApp(config);
     </script>
+    <script src="/scripts/ui-bootstrap-tpls-2.1.3.min.js"></script>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/services/Room.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/AddWindowCtrl.js"></script>
 </body>
 </html>
